service-gestion-incidents/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: service-gestion-incidents
  labels:
    name: service-gestion-incidents
    environment: local
