service-gestion-incidents/k8s/g9-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: g9-service
  namespace: service-gestion-incidents
spec:
  type: ClusterIP
  ports:
  - port: 8089
    targetPort: 8089
  selector:
    app: g9-service
