service-gestion-incidents/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: g9-ingress
  namespace: service-gestion-incidents
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/incidents/$2
spec:
  ingressClassName: nginx
  rules:
  - host: sgitu.local
    http:
      paths:
      - path: /api/incidents(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: g9-service
            port:
              number: 8089
